--- a/Design_interior/catalog.html
+++ b/Design_interior/catalog.html
@@ -12,6 +12,7 @@
     <link href="css/bootstrap-grid.css" rel="stylesheet" />
     <!--<link href="css/jquery.jscrollpane.css" rel="stylesheet" />-->
     <link href="css/jquery.mCustomScrollbar.css" rel="stylesheet" />
+    <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
 <body style="background: url('images/catalog_bg.jpg') no-repeat fixed center center;
@@ -225,7 +226,7 @@
                         </ul>
                     </li>
                     <li><a href="service.html">Услуги</a></li>
-                    <li><a href="about_design.html">О дизайне</a></li>
+                    <li><a href="news_all.html">О дизайне</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </menu>
@@ -284,7 +285,7 @@
                     <h2>багет</h2>
                     <div class="img_wrapper clearfix">
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_1.jpg" alt="">
                                 </div>
@@ -295,7 +296,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_2.jpg" alt="">
                                 </div>
@@ -307,7 +308,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_3.jpg" alt="">
                                 </div>
@@ -319,7 +320,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_4.jpg" alt="">
                                 </div>
@@ -330,7 +331,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_1.jpg" alt="">
                                 </div>
@@ -341,7 +342,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_2.jpg" alt="">
                                 </div>
@@ -353,7 +354,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_3.jpg" alt="">
                                 </div>
@@ -365,7 +366,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_4.jpg" alt="">
                                 </div>
@@ -376,7 +377,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_1.jpg" alt="">
                                 </div>
@@ -387,7 +388,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_2.jpg" alt="">
                                 </div>
@@ -399,7 +400,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_3.jpg" alt="">
                                 </div>
@@ -411,7 +412,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_4.jpg" alt="">
                                 </div>
@@ -422,7 +423,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_1.jpg" alt="">
                                 </div>
@@ -433,7 +434,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_2.jpg" alt="">
                                 </div>
@@ -445,7 +446,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_3.jpg" alt="">
                                 </div>
@@ -457,7 +458,7 @@
                             </a>
                         </div>
                         <div class="catalog_photo_item col-md-3">
-                            <a href="portfolio_photo.html">
+                            <a href="card.html">
                                 <div class="img_container">
                                     <img src="images/catalog_img_4.jpg" alt="">
                                 </div>
@@ -508,6 +509,7 @@
     <!--<script src="js/jquery.mousewheel.js"></script>-->
     <!--<script src="js/jquery.jscrollpane.js"></script>-->
     <script src="js/jquery.mCustomScrollbar.js"></script>
+    <script src="js/lightbox.js"></script>
     <script src="js/script.js"></script>
 
 </body>
