--- a/Design_interior/index.html
+++ b/Design_interior/index.html
@@ -12,10 +12,10 @@
     <link href="css/bootstrap-grid.css" rel="stylesheet" />
     <!--<link href="css/jquery.jscrollpane.css" rel="stylesheet" />-->
     <link href="css/jquery.mCustomScrollbar.css" rel="stylesheet" />
+    <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body style="background: url('images/main_bg.jpg') no-repeat fixed center center;
-    background-size: cover;">
+<body>
 
     <header>
         <div class="header_wrapper clearfix">
@@ -225,14 +225,14 @@
                         </ul>
                     </li>
                     <li><a href="service.html">Услуги</a></li>
-                    <li><a href="about_design.html">О дизайне</a></li>
+                    <li><a href="news_all.html">О дизайне</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </menu>
         </div>
     </header>
 
-    <section>
+    <section class="main">
         <div class="dark_main"></div>
 
         <div class="container">
@@ -262,6 +262,21 @@
                 </div>
             </div>
         </div>
+
+        <div class="arrow-right"></div>
+        <div class="arrow-left"></div>
+
+        <div class="carousel">
+            <div class="slide_item" style="background: url('images/slide_1.jpg') no-repeat fixed center center;
+    background-size: cover;"></div>
+            <div class="slide_item" style="background: url('images/slide_2.jpg') no-repeat fixed center center;
+    background-size: cover;"></div>
+            <div class="slide_item" style="background: url('images/card_bg.jpg') no-repeat fixed center center;
+    background-size: cover;"></div>
+            <div class="slide_item" style="background: url('images/contacts_bg.jpg') no-repeat fixed center center;
+    background-size: cover;"></div>
+        </div>
+
     </section>
 
     <footer>
@@ -299,6 +314,7 @@
     <!--<script src="js/jquery.mousewheel.js"></script>-->
     <!--<script src="js/jquery.jscrollpane.js"></script>-->
     <script src="js/jquery.mCustomScrollbar.js"></script>
+    <script src="js/lightbox.js"></script>
     <script src="js/script.js"></script>
 
 </body>
