--- a/Design_interior/portfolio.html
+++ b/Design_interior/portfolio.html
@@ -12,6 +12,7 @@
     <link href="css/bootstrap-grid.css" rel="stylesheet" />
     <!--<link href="css/jquery.jscrollpane.css" rel="stylesheet" />-->
     <link href="css/jquery.mCustomScrollbar.css" rel="stylesheet" />
+    <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
 <body style="background: url('images/main_bg.jpg') no-repeat fixed center center;
@@ -225,7 +226,7 @@
                         </ul>
                     </li>
                     <li><a href="service.html">Услуги</a></li>
-                    <li><a href="about_design.html">О дизайне</a></li>
+                    <li><a href="news_all.html">О дизайне</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                 </ul>
             </menu>
@@ -348,6 +349,7 @@
     <!--<script src="js/jquery.mousewheel.js"></script>-->
     <!--<script src="js/jquery.jscrollpane.js"></script>-->
     <script src="js/jquery.mCustomScrollbar.js"></script>
+    <script src="js/lightbox.js"></script>
     <script src="js/script.js"></script>
 
 </body>
