--- a/Design_interior/index.html
+++ b/Design_interior/index.html
@@ -22,10 +22,10 @@
             <div class="header_item">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo_big.png" alt="">
+                        <img src="images/logo_big.svg" alt="">
                     </a>
                     <a href="index.html">
-                        <img src="images/logo_small.png" alt="">
+                        <img src="images/logo_small.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -233,32 +233,27 @@
     </header>
 
     <section class="main">
-        <div class="dark_main"></div>
 
         <div class="container">
-            <div class="main_block col-md-3">
+            <div class="main_block">
                 <div class="img_container">
-                    <img src="images/Elena_Sidoruk_photo.png" alt="">
+                    <img src="images/photo_main.jpg" alt="">
                 </div>
                 <h1>Елена Сидорук</h1>
                 <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                        culpa qui officia deserunt mollit anim id est laborum. Sed ut
-                        perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-                        illo inventore veritatis et quasi architecto beatae vitae dicta
-                        sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-                        aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-                        eos qui ratione voluptatem sequi nesciunt. Neq
-                        ue porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-                        consectetur, adipisci velit, sed quia non numquam eius modi
-                        tempora incidunt ut labore et dolore magnam aliquam quaerat
-                        voluptatem.</p>
+                    <p>дизайнер - художник внутреннего и внешнего пространства.
+                        Несколько слов обо мне.
+                        С 1992 по 1997 изучала декоративно-прикладное искусство
+                        в колледже декоративно-прикладного искусства им. Касияна.
+                        С 1997 по 2001 получила полное высшее образование за специальностью
+                        "Изобразительное и декоративно-прикладное искусство" и закончила
+                        с степенью бакалавра и преподавателя изобразительного искусства.
+                        Мой опыт работы охватывает:
+                        Создание дизайна интерьера жилых и общественных помещений.
+                        Создание  малых архитектурных форм, въездных знаков, фонтанов,
+                        общее благоустройство городской среды, выполнение дизайна экстерьера,
+                        входных групп. Я надеюсь что мой сайт  сможет помочь Вам познакомиться
+                        ближе с моим творчеством . </p>
                 </div>
             </div>
         </div>
@@ -268,13 +263,21 @@
 
         <div class="carousel">
             <div class="slide_item" style="background: url('images/slide_1.jpg') no-repeat fixed center center;
-    background-size: cover;"></div>
+    background-size: cover;">
+                <div class="dark_main"></div>
+            </div>
             <div class="slide_item" style="background: url('images/slide_2.jpg') no-repeat fixed center center;
-    background-size: cover;"></div>
+    background-size: cover;">
+                <div class="dark_main"></div>
+            </div>
             <div class="slide_item" style="background: url('images/card_bg.jpg') no-repeat fixed center center;
-    background-size: cover;"></div>
-            <div class="slide_item" style="background: url('images/contacts_bg.jpg') no-repeat fixed center center;
-    background-size: cover;"></div>
+    background-size: cover;">
+                <div class="dark_main"></div>
+            </div>
+            <div class="slide_item" style="background: url('images/catalog_bg.jpg') no-repeat fixed center center;
+    background-size: cover;">
+                <div class="dark_main"></div>
+            </div>
         </div>
 
     </section>
@@ -291,7 +294,7 @@
         </div>
         <div class="logo_footer">
             <a href="index.html">
-                <img src="images/logo_small.png" alt="">
+                <img src="images/logo_small.svg" alt="">
             </a>
         </div>
         <div class="company_link">
