--- a/Design_interior/catalog.html
+++ b/Design_interior/catalog.html
@@ -23,10 +23,10 @@
             <div class="header_item">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo_big.png" alt="">
+                        <img src="images/logo_big.svg" alt="">
                     </a>
                     <a href="index.html">
-                        <img src="images/logo_small.png" alt="">
+                        <img src="images/logo_small.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -486,7 +486,7 @@
         </div>
         <div class="logo_footer">
             <a href="index.html">
-                <img src="images/logo_small.png" alt="">
+                <img src="images/logo_small.svg" alt="">
             </a>
         </div>
         <div class="company_link">
