--- a/Design_interior/service.html
+++ b/Design_interior/service.html
@@ -22,10 +22,10 @@
             <div class="header_item">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo_big.png" alt="">
+                        <img src="images/logo_big.svg" alt="">
                     </a>
                     <a href="index.html">
-                        <img src="images/logo_small.png" alt="">
+                        <img src="images/logo_small.svg" alt="">
                     </a>
                 </div>
             </div>
@@ -266,10 +266,10 @@
                         <div class="cell clearfix">
                             <div class="col-lg-6">
                                 <div class="row clearfix">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-5">
                                         <img src="images/service_1.jpg" alt="">
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-5">
                                         <img src="images/service_2.jpg" alt="">
                                     </div>
                                 </div>
@@ -530,7 +530,7 @@
                                     <div class="col-lg-6">
                                         <img src="images/service_3.jpg" alt="">
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-5">
                                         <img src="images/service_4.jpg" alt="">
                                     </div>
                                 </div>
@@ -640,10 +640,10 @@
                         <div class="cell clearfix">
                             <div class="col-lg-8">
                                 <div class="row clearfix">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-3">
                                         <img src="images/service_9.jpg" alt="">
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <img src="images/service_8.jpg" alt="">
                                     </div>
                                 </div>
@@ -746,7 +746,7 @@
         </div>
         <div class="logo_footer">
             <a href="index.html">
-                <img src="images/logo_small.png" alt="">
+                <img src="images/logo_small.svg" alt="">
             </a>
         </div>
         <div class="company_link">
