--- a/Design_interior/news_all.html
+++ b/Design_interior/news_all.html
@@ -22,12 +22,14 @@
         <div class="header_wrapper clearfix">
             <div class="header_item">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logo_big.svg" alt="">
-                    </a>
-                    <a href="index.html">
-                        <img src="images/logo_small.svg" alt="">
-                    </a>
+                    <div class="logo_cont">
+                        <a href="index.html">
+                            <img src="images/logo_big.svg" alt="">
+                        </a>
+                        <a href="index.html">
+                            <img src="images/logo_small.svg" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="header_item">
@@ -251,12 +253,12 @@
                                 <div class="date">
                                     25.10.16
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-md-3">
                                     <div class="img_container">
                                         <img src="images/news_all_1.jpg" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-9">
+                                <div class="col-md-9">
                                     <h3>название новости</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -271,12 +273,12 @@
                                 <div class="date">
                                     25.10.16
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-md-3">
                                     <div class="img_container">
                                         <img src="images/news_all_1.jpg" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-9">
+                                <div class="col-md-9">
                                     <h3>название длинной новости</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -291,12 +293,12 @@
                                 <div class="date">
                                     25.10.16
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-md-3">
                                     <div class="img_container">
                                         <img src="images/news_all_1.jpg" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-9">
+                                <div class="col-md-9">
                                     <h3>название длинной новости в две строки</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit,
