--- a/Design_interior/news.html
+++ b/Design_interior/news.html
@@ -22,12 +22,14 @@
         <div class="header_wrapper clearfix">
             <div class="header_item">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logo_big.svg" alt="">
-                    </a>
-                    <a href="index.html">
-                        <img src="images/logo_small.svg" alt="">
-                    </a>
+                    <div class="logo_cont">
+                        <a href="index.html">
+                            <img src="images/logo_big.svg" alt="">
+                        </a>
+                        <a href="index.html">
+                            <img src="images/logo_small.svg" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="header_item">
