--- a/Design_interior/portfolio.html
+++ b/Design_interior/portfolio.html
@@ -310,6 +310,12 @@
                             amet, consectetur, adipisci velit, sed quia non numquam eius modi
                             tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
                         </div>
+                        <div class="more">
+                            Показать больше
+                        </div>
+                        <div class="less">
+                            Скрыть
+                        </div>
                     </div>
                 </div>
             </div>
