--- a/Design_interior/service.html
+++ b/Design_interior/service.html
@@ -18,6 +18,7 @@
 <body style="background: url('images/service_bg.jpg') no-repeat center center fixed; background-position: cover;">
 
     <header>
+        <div class="sheet"></div>
         <div class="header_wrapper clearfix">
             <div class="header_item">
                 <div class="logo">
