--- a/Design_interior/catalog.html
+++ b/Design_interior/catalog.html
@@ -19,6 +19,7 @@
     background-size: cover;">
 
     <header>
+        <div class="sheet"></div>
         <div class="header_wrapper clearfix">
             <div class="header_item">
                 <div class="logo">
