--- a/Design_interior/photo.html
+++ b/Design_interior/photo.html
@@ -18,6 +18,7 @@
 <body>
 
     <header>
+        <div class="sheet"></div>
         <div class="header_wrapper clearfix">
             <div class="header_item">
                 <div class="logo">
