--- a/Design_interior/card.html
+++ b/Design_interior/card.html
@@ -15,8 +15,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body style="background: url('images/card_bg.jpg') no-repeat fixed center center;
-    background-size: cover;">
+<body style="background: url('images/card_bg.jpg') no-repeat fixed center center;">
 
     <header>
         <div class="sheet"></div>
