--- a/Design_interior/portfolio.html
+++ b/Design_interior/portfolio.html
@@ -15,8 +15,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body style="background: url('images/main_bg.jpg') no-repeat fixed center center;
-    background-size: cover;">
+<body style="background: url('images/main_bg.jpg') no-repeat fixed center center;">
 
     <header>
         <div class="sheet"></div>
@@ -252,7 +251,7 @@
                         <div class="col-md-4">
                             <a href="portfolio_photo.html">
                                 <div class="img_container">
-                                    <img src="images/portfolio_3.jpg" alt="">
+                                    <img src="images/1.jpg" alt="">
                                     <div class="description">
                                         Название альбома
                                     </div>
@@ -266,7 +265,7 @@
                         <div class="col-md-4">
                             <a href="portfolio_photo.html">
                                 <div class="img_container">
-                                    <img src="images/portfolio_1.jpg" alt="">
+                                    <img src="images/2.jpg" alt="">
                                     <div class="description">
                                         Длинное название этого альбома
                                     </div>
@@ -294,7 +293,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="add_more">
-                        загрузит еще
+                        загрузить еще
                     </div>
                     <div class="seo">
                         <div class="text">
