--- a/Design_interior/service.html
+++ b/Design_interior/service.html
@@ -15,7 +15,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body style="background: url('images/service_bg.jpg') no-repeat center center fixed; background-position: cover;">
+<body style="background: url('images/service_bg.jpg') no-repeat center center fixed;">
 
     <header>
         <div class="sheet"></div>
