--- a/Design_interior/news_all.html
+++ b/Design_interior/news_all.html
@@ -15,8 +15,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body style="background: url('images/card_bg.jpg') no-repeat fixed center center;
-    background-size: cover;">
+<body style="background: url('images/card_bg.jpg') no-repeat fixed center center;">
 
     <header>
         <div class="sheet"></div>
@@ -251,9 +250,9 @@
                     <div class="col-lg-6">
                         <div class="news_all_container">
                             <div class="news_all_item clearfix">
-                                <div class="date">
-                                    25.10.16
-                                </div>
+                                <!--<div class="date">-->
+                                    <!--25.10.16-->
+                                <!--</div>-->
                                 <div class="col-md-3">
                                     <div class="img_container">
                                         <img src="images/news_all_1.jpg" alt="">
@@ -271,9 +270,9 @@
                                 <a href="news.html" class="read_more">читать далее</a>
                             </div>
                             <div class="news_all_item clearfix">
-                                <div class="date">
-                                    25.10.16
-                                </div>
+                                <!--<div class="date">-->
+                                    <!--25.10.16-->
+                                <!--</div>-->
                                 <div class="col-md-3">
                                     <div class="img_container">
                                         <img src="images/news_all_1.jpg" alt="">
@@ -291,9 +290,9 @@
                                 <a href="news.html" class="read_more">читать далее</a>
                             </div>
                             <div class="news_all_item clearfix">
-                                <div class="date">
-                                    25.10.16
-                                </div>
+                                <!--<div class="date">-->
+                                    <!--25.10.16-->
+                                <!--</div>-->
                                 <div class="col-md-3">
                                     <div class="img_container">
                                         <img src="images/news_all_1.jpg" alt="">
