--- a/Design_interior/news.html
+++ b/Design_interior/news.html
@@ -15,8 +15,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body style="background: url('images/news_bg.jpg') no-repeat fixed center center;
-    background-size: cover;">
+<body style="background: url('images/news_bg.jpg') no-repeat fixed center center;">
 
     <header>
         <div class="sheet"></div>
@@ -252,9 +251,9 @@
                     <div class="col-lg-6">
                         <h2>название длинной новости в двe строки</h2>
                         <div class="news_all_item clearfix">
-                            <div class="date">
-                                25.10.16
-                            </div>
+                            <!--<div class="date">-->
+                                <!--25.10.16-->
+                            <!--</div>-->
                             <div class="img_container">
                                 <img src="images/news_1.jpg" alt="">
                             </div>
