--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -61,7 +61,9 @@
     </header>
 
     <div class="banner">
-        <img src="images/banner.jpg" alt="">
+        <div class="container">
+            <img src="images/banner.jpg" alt="">
+        </div>
         <!--<div class="container">-->
             <!--<div class="col-md-6">-->
                 <!--<h1>-->
@@ -163,10 +165,9 @@
                     <div class="col-md-9">
                         <h5>Самсонова Маргарита</h5>
                         <div class="text">
-                            Акушер-гинеколог, кандидат медицинских наук, в специализацию которой входят:
-                            амбулаторная гинекология, комплексное уродинамическое исследование, УЗИ в
-                            акушерстве, репродуктивная хирургия, гинекология детей и подростков. Автор ряда
-                            публикаций по гинекологии в центральных изданиях.
+                            Молодой коллектив врачей высшей и первой категорий владеет новыми
+                            технологиями, постоянно обучается, в своей работе руководствуется принципом – помочь
+                            Пациенту найти оптимальное и, главное, правильное решение его проблем!
                         </div>
                     </div>
                 </div>
@@ -181,10 +182,10 @@
                     <div class="col-md-9">
                         <h5>Громова Светлана</h5>
                         <div class="text">
-                            Гинеколог, врач высшей квалификационной категории, кандидат медицинских наук
-                            со стажем работы 15 лет. Специализация по гинекологической эндокринологии,
-                            проблемам бесплодного брака и невынашиванию беременности, диагностике и
-                            лечению патологии шейки матки, кольпоскопии.
+                            Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный
+                            стоматологический центр, покрывающий практически все возможные проблемы пациента.
+                            Мы сочетаем высокий уровень медицинского обслуживания и лучшие традиции европейской и
+                            украинской стоматологии с современными высокотехнологичными методами лечения.
                         </div>
                     </div>
                 </div>
@@ -202,58 +203,59 @@
             <div class="row clearfix">
                 <div class="col-md-3">
                     <div class="img_container">
-                        <img src="images/8_38.png" alt="">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Профессионализм и опыт
-                        врачей.</span> Высококвалифици-
-                        рованные специалисты,
-                        имеющие опыт работы в
-                        ведущих клиниках Европы
-                        и России и мощную теорети-
-                        ческую подготовку.
+                        <span>Место расположения
+                        Стоматология.</span> «Viktoria-Dent» расположена в центре города,
+                        в ста метрах от станции метро «Дружба Народов».
+                        К нам удобно добираться из любой точки города.
+                        Пациентов здесь встретят квалифицированный персонал
+                        и комфортные условия обслуживания.
+
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img_container">
-                        <img src="images/9_38.png" alt="">
+                        <i class="fa fa-rocket" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Профессионализм и опыт
-                        врачей.</span> Высококвалифици-
-                        рованные специалисты,
-                        имеющие опыт работы в
-                        ведущих клиниках Европы
-                        и России и мощную теорети-
-                        ческую подготовку.
+                        <span>Современное оборудование.</span>
+                        В клинике установлено немецкое оборудование:
+                        - стоматологические установки фирмы Sirona,
+                        - рентгенаппаратура нового поколения – радиовизиограф
+                        который уменьшает дозу рентгеноблучения на 90 процентов,
+                        - и другое.
+
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img_container">
-                        <img src="images/10_36.png" alt="">
+                        <i class="fa fa-handshake-o" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Профессионализм и опыт
-                        врачей.</span> Высококвалифици-
-                        рованные специалисты,
-                        имеющие опыт работы в
-                        ведущих клиниках Европы
-                        и России и мощную теорети-
-                        ческую подготовку.
+                        <span>Доступные цены.</span>
+                        Наши услуги доступны всем. Предоставляя качественный сервис,
+                        предлагаем гибкие цены и скидки, проводим акции.
+                        Комплексный подход, индивидуальные программы лечения,
+                        обеспечиваем оптимальное соотношение цены и качества услуг.
+
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="img_container">
-                        <img src="images/11_44.png" alt="">
+                        <i class="fa fa-heartbeat" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Профессионализм и опыт
-                        врачей.</span> Высококвалифици-
-                        рованные специалисты,
-                        имеющие опыт работы в
-                        ведущих клиниках Европы
-                        и России и мощную теорети-
-                        ческую подготовку.
+                        <span>Безопасное лечение.</span>
+                        Клиника использует эффективные:
+                        - бактерицидные лампы с автоматическим обеззараживанием,
+                        - ультразвуковая ванна для мойки наконечников,
+                        - упаковка инструмента в разовые Крафт–пакеты,
+                        - автоклав MELAG23B (Германия),
+                        Эти меры по программам «анти гепатит-спид»
+                        защищают от опасных инфекций.
+
                     </div>
                 </div>
             </div>
@@ -297,10 +299,17 @@
         </div>
     </div>
 
-    <div id="map"></div>
+    <div class="map_wrapper clearfix">
+        <div class="img_container">
+            <img src="images/IMG_1343.JPG" alt="">
+        </div>
+        <div id="map"></div>
+    </div>
 
     <div class="address">
-        <img src="images/banner_footer.jpg" alt="">
+        <div class="container">
+            <img src="images/banner_footer.jpg" alt="">
+        </div>
     </div>
 
     <div class="form_block">
